--- a/text/长文1.md
+++ b/text/长文1.md
@@ -1,3 +1,817 @@
+
+接“katago的大块死活bug：棋子越多，判断越错”
+
+Katago：我明明优势很大，怎么就输了？<br>
+https://www.bilibili.com/video/BV1Pj411m7UG/
+
+北极元灵
+省流：
+AI：“码了两排城墙的情况下，我先手突入，优势在我。”
+up：“让子规则下白方只要占同样的地盘就能赢，如今中间已经堵死下不了了，模仿棋，启动！”
+
+UP主觉得很赞
+
+白衣苍驹：卑鄙的两脚兽[doge]
+
+棋不如人：实测，星阵一样
+
+叶落尘梦花辞树：ai算的是胜率，但是这种局面人类已经能从无数的可能性中找到必胜的唯一途径，再大量的计算和穷举概率都没有意义了，人类已经从海量的ai变化中窥得了必胜的路，因此落下的每一手，对于ai来说都是独属于人类的“神之一手”。
+
+冰河BW：真人下白必赢，但如果只能下模仿棋的话白必输[思考]
+
+光天辉夜：katago面对模仿棋确实没有针对性策略，让先模仿棋katago一般不主动用先手优势在中间吃，只要不在中间吃让先模仿棋必胜
+
+水诸异：模仿棋没必要着急冲到中间的。一开始就冲到中间，还给人反应的机会。要是不管他，棋局慢慢发展，发展到中间，模仿棋一方骑虎难下的时候，顺势推掉就行[doge]
+视频是因为中间那两堵墙
+
+光天辉夜 回复 @水诸异：katago没有针对模仿棋的策略
+
+科西嘉小矮人：这和让先模仿棋还不一样。让先时双方最优下法本来就是黑棋必胜，katago给的初始胜率白棋也低，就算它输了棋也不能说它有什么错。但视频中的局面是黑棋必输的，katago却在一开始给了黑棋更高的胜率，这就是ai判断出错了。
+
+PaperBlank 回复 @科西嘉小矮人：让先下模仿棋直接征子或者中心紧气就好
+
+Cahcn_：这样其实意义不大。。严格来说你这个是围棋规则但已经不是围棋了，ai是针对围棋训练的，这种局面在围棋里不可能出现，所以在这种情况下ai的模型判断不准确是非常正常的。你这个其实和之前那种看不清死活的bug道理一样，都是因为ai按照常规围棋训练下导致对极端情况判断不明，但之前那个勉强还在围棋的范畴里。。
+
+五星上将佩可莉姆：对，队ai来说这已经不是围棋了
+
+爱玩红石的猪灵：按这个说法那至少五成死活题也不是围棋了
+
+松___ 回复 @爱玩红石的猪灵 :死活能锻炼人的计算力，并且能掌握死活知识，最实战的死活，判断不容易失误，是关于围棋的训练。
+这种有什么用处呢？
+
+松___ 回复 @松___ :对实战的死活
+
+伤风后：你是站在棋手的视角的，但是对于研发者，对于人工智能的角度，它成功论证了现在围棋AI不仅仅是死活判断有问题，有很大意义
+
+伤风后 回复 @松___ :你是站在棋手的视角的，但是对于研发者，对于人工智能的角度，它成功论证了现在围棋AI不仅仅是死活判断有问题，有很大意义
+
+Cahcn_ 回复 @伤风后 :有啥意义，我就是站在模型的角度说的，这种bug你让开发者来看一眼就明白是怎么回事，但是基本没法修，所以我说没什么意义，如果你懂点ai你就知道为什么了。
+
+清明节萌萌猫 回复 @Cahcn_ :你偏要说成对全世界没一点意义是吧[笑哭]
+
+Cahcn_ 回复 @你會在評論區看到我 :本来就是对ai训练没有意义，你拿用正常规则训练好的ai玩其他规则肯定不行啊，alpha GO能跟我比星际2吗？
+
+36957-999 回复 @伤风后 :幽默，你但凡了解一下unsupervised learning你就该知道这个东西基本上是完全可以预料到的。
+
+伤风后 回复 @36957-999 :你说的是哪个东西呢？而且我机器学习还是略知一二的
+
+36957-999 回复 @伤风后 :dl通过cnn向蒙特卡洛树反回选点蒙特卡洛最优选点又不是每次都是模仿棋哪一步，所以自然不可能看出来模仿棋是绝对胜利选择啊
+
+副露杠精断幺怪：原因很简单，对于AI的胜率算法来说人类跟他每步都下模仿棋的概率无限趋近于0，但对于采用模仿策略的人类棋手而言就是100%，这也可以认为是一种“对抗攻击AI”了，让AI极小概率发生的错误稳定复现
+
+和风化羽：纯模仿棋黑胜，在中间下子最后一手是黑棋的，这样可以提掉白墙
+
+大木木寵：我围棋只是入门 但是一眼知道啥意思 这样看人工智能还是差点意思[打call]
+
+YGosS：估计和之前那个bug一样，在特定情况下对某些点位的逻辑有问题，应该是程序的问题
+
+羊祜大王：说实话初学者别来评价ai，你都整不明白这是怎么回事
+
+大木木寵 回复 @和谁撞到亦怕生保 :我初学者但是也能看懂AI在这个局面下的判断是完全错误的
+
+内曼：计算量太少了
+
+科西嘉小矮人：不少了，开局算了40万次，还是认为黑优势。算再多次结果应该也一样
+
+羊祜大王 回复 @科西嘉小矮人 :四十万也不算多吧
+
+東雪蓮男友 回复 @和谁撞到亦怕生保 :狗不会算模仿棋
+
+事已至此明天再说：狗算再多，如果不会认为下一步对手会模仿的话就算不出
+
+羊祜大王 回复 @東雪蓮男友 :跟狗正常下模仿棋的话好像是能算胜率的呀
+
+東雪蓮男友 回复 @和谁撞到亦怕生保 :模仿棋的话，人类能算到底，狗不会专门对这一种情况进行计算，所以我说狗不会算
+
+羊祜大王 回复 @東雪蓮男友 :这我知道
+
+羊祜大王 回复 @東雪蓮男友 :但是狗给的胜率是准的吧
+
+東雪蓮男友 回复 @和谁撞到亦怕生保 :确实是准的，但是不适用于模仿棋
+
+東雪蓮男友 回复 @和谁撞到亦怕生保 :而且到后期可能真的就不准了，因为我看过模仿棋棋谱狗给的胜率，到最后可能会突然上升
+
+Ginverice：如果开局就跟它摆模仿棋呢，会怎么样
+
+nomuuuu：围棋是19x19
+
+极其正经的赵东辰：遇到模仿棋，我直接一手天元，然后开始模仿[doge]
+
+嘻人秋：ai应该会制造征子，但是这种没法这样搞
+
+bili_87096742：你会被爆杀
+
+喜欢蓝酱的Lily：会输得很惨[doge]
+
+羊祜大王：会输
+
+三国sha时候动态抽奖啊：先手的一方会把天元的字吃掉。像视频中的这种情况吃不掉天元，模仿棋就是无敌的。
+
+不穿袜子的小白 回复 @嘻人秋 : ai不会有意对抗模仿，但是会保持让模仿方停止模仿就会陷入劣势的状态
+
+apzya：ai认为的是概率优势呀，可你这么走实际上（程序里判定）概率很低。
+
+伤风后：你的这个概率是什么概率呢？为什么有的棋对于人而言还很复杂，但是人工智能已经超过90%呢？人工智能概率不对就是人工智能的缺陷
+
+apzya 回复 @伤风后 :几乎任何概率意义上，“你整局中对对方的每一手都采取了唯一确定的应对”这个事件都是约等于0的低概率的。
+
+伤风后 回复 @apzya : 首先要赢下这盘棋，就不需要每一手都采取了唯一确定的应对。
+其次，就算你说的成立，也不是它能超过50%概率胜利的理由。
+再者，如果说AI实力更强，那么这个概率是不是就不应该是开局60%？
+最后如果说AI能够找到确信合理的解，是不是这个概率就是超过90%了，就像我说的“有的棋对于人而言还很复杂，但是人工智能已经超过90%"
+这单纯是AI没发现可以走模仿棋罢了
+
+AntiTankGun：这不就是幻想对手要怎么走棋吗？怎么可能都老老实实的跟着katago的思路来呢？
+
+AntiTankGun：下棋有下无理手的，可是说是无理手也要能正确应对才能叫无理手，毕竟下棋靠赢棋来说事，惩罚不了的无理手再怎么批评也没意义
+
+魔法少女白鸟翔：模仿棋是很常见的战术啊，甚至不需要会下围棋，看看动漫都能见到不少。这么常见的战术，在ai这种强大的算力之下，甚至没有分出一丢丢的算力来计算一下可能性，这已经不是“以正合，以奇胜”能解释的了
+
+apzya 回复 @魔法少女白鸟翔 : 请问你觉得下模仿棋的概率是多少呢？
+
+活在梦中梦的梦里 回复 @伤风后 :人工智能概率不对，只是因为算力开的还不够大，不是吗？我就问问，为什么在写深度学习模型的时候不加上一些特殊的情况，比如这种封闭情况，让人工智能不用去算直接得出结论呢？因为我训练的模型就不是针对你这个特殊情况的。引擎需要去优化的地方当然还有很多，千百盘正常对局中明显出错几次的情况还是存在的，但是引擎明明白白写了深度了，你说引擎错了，是想表达什么呢？
+
+伤风后 回复 @活在梦中梦的梦里 : 你后面说的没错，但这和我说的人工智能概率不对有什么冲突呢？人工智能概率不对就是不对。而且这种情况和算力开的还不够有什么关系，有没有可能它已经剪枝了，和算力有啥关系
+
+伤风后 回复 @伤风后 : 应该要指出的是，所谓AI的概率，是指这盘棋交给它，它自己认为有多大概率赢，而不是人。
+
+伤风后 回复 @伤风后 : 既然人能找到必胜的途径，而AI不行，就说明这种情况下，AI输给人了，人工智能存在缺陷
+
+骑小蜗的夜精灵 回复 @apzya :正常棋局来说模仿棋不行，但这个棋局下模仿棋一定是后手优势，KataGo开局认为黑棋优势肯定就是它算法有问题了。
+
+Whiteの发带：应该是因为中间那个大号双活的存在吧，ai可能对特殊棋形有判断上的缺陷
+
+北雁兮难飞：说明ai对极端情况考虑不足？这也算是发现一个漏洞了（类似之前那个bug）
+
+Void_H：这个跟之前那个bug一样，对于全局的一些死活缺乏长远判断。
+
+jiangjiyun：天地巨同
+
+28758138447_bili：恐怕模仿棋的下法并不能保证100%胜率。这局要是后面黑棋不粘劫而强撑四劫循环，那么该如何应对呢？
+
+口袋Ranger：只要我不按人能走出的棋谱走，就能玩死机器人[笑哭]
+
+无能之炼金术师：没必要这么狠[笑哭]，对天元各用黑白做个两眼活棋围起来应该就可以了
+
+疯钻_：剪枝导致不擅长应对超长计算
+
+亚尔特兔：这个给AI的计算时间太少了，你让 AI 执黑每步棋计算5分钟试试
+
+爱玩红石的猪灵：我在想可不可以用GAN训练围棋，即神经网络A负责给出低计算量和高计算量的胜率，并尽量让两者相同；神经网络B负责给出令A犯错的盘面。
+
+堇㙆：走一模一样肯定是先手赢了啊
+
+不滅的公主-法仆塔：后手赢啊，先手贴目
+
+事已至此明天再说：模仿棋先手可以破是因为可以造对角征子，这个局面中间一排子没办法造，完全一样黑肯定要输一个贴目
+
+迁浮本浮：纯模仿棋，中间最有可能的情况要么是双活要么是黑棋多走一个单关，怎么可能走的出一个贴目
+
+丨一n丶t一丨 回复 @事已至此明天再说 :可以造对杀但ai一般不会动中间厚势
+
+青空に流れる雲：模仿棋最后黑贴不出目了是吧[笑哭]
+
+重巡洋舰欧根：中间那一排铁壁怎么也死不了，要是没公气是不是就没bug了？
+
+fyx1995：一直模仿能死
+
+短襪：這盤面ai先手判斷自己勝率高很正常，但它不知道白有必勝法，ai很強卻沒有真正理解圍棋
+
+莫舞呀：因为塔是自己和自己下
+
+无ヶ妄：这个局面逼迫对方放弃模仿非常困难
+
+昨日的未来ovo：有点意思[doge]
+
+南方大冻梨：人才
+
+账号已注销：卧槽，天才啊
+
+陈塘关小李白：我摆四个对面就认输了啊
+
+春原法米：五子不行
+
+星星很完美：五子棋别来碰瓷
+
+长月纸：你为什么不摆五个直接赢比赛，是五子不能赢吗
+
+三角函数循环差：突然想到 如果黑白后续都按照一选下又会如何呢
+
+喜欢蓝酱的Lily：会有一方输掉[doge]
+
+沉默的幽香：天才！！
+
+上元酥：不懂就问，中间那条是楚河吗[doge]
+
+还打了个哈欠：是汉界
+
+某新型核潜艇艇长 回复 @还打了个哈欠 :是江东铁壁
+
+马努Manu马努 回复 @连蒙带猜真君 :若敢来犯，必叫你大败而归！
+
+两仪家家计式 回复 @连蒙带猜真君 :白的才是江东铁壁[doge]黑的是魏营[doge]
+
+僧小贤：谁告诉我 为何ai不下到最中间区域
+
+策鼎：ai不知道这是模仿棋[doge]
+
+策鼎：且最中间没有目数，ai不会选择
+
+mc的热爱者：因为中间区域是单官，价值很低，几乎等于停一步棋。
+而且如果AI如果真的这样下的话，白棋跟着应住即可，最后只剩两口公气时白棋在别处走一步可以保证有正价值的棋或者把眼摆出来（前面说了在中间下几乎没有价值，这样目数上AI是亏的），下到最后中间也是活棋，AI输得更多。
+
+僧小贤 回复 @mc的热爱者 :哦哦
+
+_ull_：如果katago先走天元，阁下又该如何应对
+
+_ull_：其实四劫连环时katago相当于在这个条件下的最优解了
+
+永雏阿蒙：四劫循环 我记得当年常昊还是古力下出过一局
+
+永雏阿蒙：想起来了 古力和小李
+
+耶乃_：黑棋胜率60% 又没说是100% 而且也没说是一直60% 哪错了？你把天元拉了条封锁线走模仿棋 胜率不是一直在变化吗？ 正常棋局胜率不是也在变化吗？？不懂探讨这个的意义
+
+AkaneShiina：ai走一手天元不久不能模仿了[doge]
+
+Kim_Jong-Um：太邪恶了简直像狗一样狡猾的策略[打call]
+
+桴浮海：这个BGM
+
+副露杠精断幺怪：最后ai甚至试图下四劫循环[doge]
+
+追梦的小米：哈哈，笑死
+
+-水晶炼狱-：进来前：即使是这样up能赢也很牛逼
+进来后：好家伙，原来是[doge]自战
+
+梵猫Studio：说明ai远远没达到围棋之神的水平
+
+清骖：如果阿尔法狗下天元呢[doge]
+
+GoQuester：请问这个软件叫什么名？
+
+科西嘉小矮人：跑katago的界面是lizzieyzy
+
+GoQuester 回复 @科西嘉小矮人 : 谢谢，我之前只用过katrain和Sabaki
+
+一哭二闹三______：黑棋：奶奶滴，跟我玩阴的是吧，看我天地大同[doge]
+
+小纸盒：AI武德何在？
+
+brooklynb4by：楚河汉界！
+
+流遂无情：难他天
+
+katago新bug：两眼死棋<br>           
+https://www.bilibili.com/video/BV1i34y1N7BS/
+
+新版katago的一个bug。用的是katago18b的s6981权重。
+
+高阶领主的死徒：据说是因为AI是把棋盘切开来看的，所以这种大半个棋盘的一条巨龙就容易出错
+
+逗泥丸的平方：那为啥走几步就会发现呢
+
+高阶领主的死徒 回复 @逗泥丸的平方 :因为本质上是AI把大量算力用在了毫无意义的地方，所以复杂度下去了就好了。
+另一个例子是AI算不清对杀，尤其是气很多的巨龙的对杀，需要计算的情况数量会虚高。
+
+techotakustw 回复 @逗泥丸的平方 :相当于手动剪枝了
+
+绯雪の千夜：ai不具备真正的推理能力，都是历史数据产生的推算能力，因此在布局上通过概率推算更有优势，当出现依靠围棋的理解能力，解没历史数据相似度低的棋局，ai无法进行其中的推理行为，他只是知道规则，知道有这些棋理，能通过历史数据使用这些棋路，但无法理解这些棋路的生成原因，就和chatgpt进行复杂的大数字计算会错一样，只是知道数学公式，不理解其中表达的原理，出现历史数据中没有的场景，无法进行原理推理
+
+逗泥丸的平方 回复 @techotakustw :我觉得应该刚好是相反的，是ai错误的把这些可能性剪掉了
+
+湮灭的末影狐：似乎狗子面对特别长的大龙就有犯病的趋势
+
+石头飞飞：用人类棋谱训练的 人类没走过的对它来说就是盲点
+
+氧烷的日常 回复 @石头飞飞 :您这是老老老黄历啦
+
+清明节萌萌猫 回覆 @石头飞飞 :人類：我何德何能阿
+
+某小达 回复 @石头飞飞 :什么年代了还在人类棋谱，1997年深蓝就已经在靠剪枝算法了
+
+超原子当量 回复 @石头飞飞 :早就是靠ai自己跟自己下训练的了
+
+县铁咸阳段资深用户 回复 @神u八方 :10的172次方这个数量级，即使让AI自己跑也得跑到宇宙毁灭了才能把围棋盘面穷举完[doge]在穷举法明显没有可行性的情况下，AI对于低概率棋形必然会有判断缺陷
+
+宫羽琴社：围棋Ai比人类顶尖棋手强几段，但是离围棋之神还有很大举例，如果围棋之神为100段，人类顶尖棋手为九段 围棋Ai为十一段
+
+PerfComic：九段只是个称号[辣眼睛]
+
+扒了罢了 回复 @PerfComic :如果把围棋段位量化，柯洁和战鹰也就3子的差距，绝艺让柯洁2子应该也是没问题的，所以说ai有十一段还是保守了
+
+世界三大麦克雷：要不你再看看你在说什么？有专门的积分榜rating需要你在这作秀？
+
+宫羽琴社 回复 @扒了罢了 :对
+
+宫羽琴社 回复 @PerfComic :段位是对棋手棋力量化[笑哭]，
+
+MangLers：还围棋之神，你是中二之神吧[笑哭]
+
+扒了罢了 回复 @voyagerlike :围棋的终极算法，以及必胜下法一直是中国，日本，韩国几百上千年的追求，说围棋之神不为过，当ai出现时真的把ai当做围棋之神来看待，但就目前而言，ai离围棋之神还有一段距离。
+
+PerfComic 回复 @宫羽琴社 :elo分才是量化棋手水平的
+
+宫羽琴社 回复 @PerfComic :好像是
+
+MangLers 回覆 @污水厂路人王 :对不起，不该说你爹[难过]
+
+MangLers 回覆 @扒了罢了 :围棋可没有算法，有算法的是ai[doge]
+
+小小小俊仔 回复 @轻云蔽月LH :据谁说啊，这也能算出来，这么牛[吃瓜]
+
+你是我灵魂的杂志 回复 @扒了罢了 :围棋哪里有人追求必胜下法，一切都是和对手的博弈
+
+账号已注销 回复 @柯征 :围棋肯定有不败下法，但是人类记不住
+
+你是我灵魂的杂志 回复 @大同实验室 :你对手越强，你就越得迭代你的算法，这样就无解了
+
+账号已注销 回复 @柯征 :围棋变化总数有限，只是人类记不全，甚至超级计算机也找不全
+
+你是我灵魂的杂志 回复 @大同实验室 :谬论
+
+账号已注销 回复 @柯征 :回去补补吧，信息全公开且没有随机性的回合制游戏肯定有至少一方有不败策略
+
+云梦不吃天有 回复 @柯征 :围棋下发一定有限啊，那就一定一方有必胜下发。因为考虑提子我直接所有点位可以复下每一步可能下法都是361，平均一局500手，那围棋不也就361*500种可能吗，这是有限的当然有最优解。事实上可能性还远小于此
+
+你是我灵魂的杂志 回复 @天云有梦 :原来只有这点可能吗，是你小看ai还是我数学没学好？ai一秒就能穷尽你说的这点，还要什么算法
+
+你是我灵魂的杂志 回复 @大同实验室 :你这说的，理论理论，理论上成立，放到现实里看有多离谱，单单放在物理领域，这个变化已经可以被认为是无穷大了，所以没有现实意义
+
+账号已注销 回复 @柯征 :能不能找到不败策略和有没有不败策略是两回事，找不到的原因是分支过多而不是没有不败策略
+
+云梦不吃天有 回复 @柯征 :确实我脑子糊掉了，按我的说法一共应该是361的500次方，那也是有限的，并且目前的ai跑不完。你一直说别人有问题你倒是说说一盘围棋的可能性怎么算，为什么是无穷大
+
+云梦不吃天有 回复 @柯征 :这当然现在没有现实意义，这么多可能就是ai跑出来了也不可能有人把主要可能背下来。但确实是有限的，人家跟你说一定有必胜下法你非要说不对，现在又来说没有现实意义
+
+你是我灵魂的杂志 回复 @天云有梦 :“必胜下法”这个说法就是伪命题，361∧500次比已知银河系里的所有原子加起来还多，只要对方对手的算力比你的计算机强，或者对方的算法优化比你高明，那你所谓的“必胜下法”只是“相对必胜”
+
+你是我灵魂的杂志 回复 @天云有梦 :当然，如果量子计算机投入应用，算力能提高万倍，指数级的计算量将被量子算法稀释，不过那时候应该已经是赛博时代了
+
+天道剑飞 回复 @账号已注销 :现实存在和理论存在是有区别的。现实并不存在必胜下发，因为算力没有最高只有更高。还有就是必胜下发很有可能会因贴目改变而改变
+
+星-小目 回复 @天道剑飞 :无论规则怎么改，数学上肯定是有解的
+
+jdjs12：AI需要保证正确性，不能做长线的推演，因为长线的推演，他推演越长，正确的可能性就越多，正确和错误就越模糊。所以他只能做短线局部的推演，在做到长线推演的时候就会出现偏题跑题漏题的情况。这点在各种AI当中都有体现，不管是语言图画还是围棋。这就出现两种情况，两种ai不能克服的情况，一种是局部的对错交叠的死活不能判断。比如围棋中的杀棋区间，因为杀棋是一种重复肯定和否定的局势，死活是不断变化的，在这种变化中AI会出现脱线离题的情况。还有一种就是这种长线，因为长线的判断导致AI没有办法进行死活对错的有效判断，死活对错被模糊化了，所以Ai会失去判断，失去判断能力。这也是为什么现在chatGPT的AI在使用性能上会随使用而不断下降，就是因为它在运行过程当中接收了大量的长线和对错的反复判断，导致他的判断能力不断的模糊化，最终会回归到一种痴呆状态。
+因为现在人工智能本质上只是一个习题集而已。人工智能真正的拥有智能性，它有一个最关键的特征，就是它能够求错，也就是能够以错为对，他能够在错误中找到他的正确的要素，同时能够反过来在对中找到他错误的因素，也因此他能够将整个推演过程的连续性和逻辑性维持在他推演的中心观点和中心需求当中，不会被正确和错误的连续迭代而跑偏，而模糊化。现在的人工智能没有这个功能，他只能够通过正确的答案的累积来获得一个最正确的答案，而不能够从错误的答案当中获得一个正确答案。所以他没有办法始终将逻辑的运行围绕着观点核心去展开，他的逻辑就一定会被正确和错误的形势所带偏，这样的智能是没有实际价值的。一个真正人工智能的训练，它一定是在错误中迭代正确，而不是在正确中迭代正确。现在的人工智能显然没有这种错中求对的能力。
+
+论坛守夜人：说的太好了，学到了[抱拳][抱拳][抱拳][抱拳]
+
+D-c-kua-ra-in：可能ai认为这种情况不可能正常下出来就没算
+
+孤独的风筝啊：你试试60B，18B虽然理论更强，但是60B更稳一些
+
+早川ナオミ：极高算力下60B更强吧[doge]
+
+孤独的风筝啊 回复 @云图阁阁主 :不用极高，up这个局面用60B试了就知道了[妙啊]十万步次内可以算出来
+
+科西嘉小矮人：经测试，一年前的60b权重也有这个bug。新的60b我没下载（毕竟强度不如18b），我猜也不会更好
+
+超原子当量 回复 @科西嘉小矮人 :一年前的60b跟最新的应该还是差了不少的[doge]
+
+nioehwrs：这类算法似乎都是以局部性为基础，越长距离的感知会越弱
+
+mmmmhhhhzzzz：深层的卷积网络能保证深层的特征具有全局感受野，还是数据的问题
+
+グレイたん：说的都没问题吧，卷积降低了计算量同时也丢失了一些信息量，远处的信息少了就需要更多针对性数据来补足(但模型规模在那里，喂数据能解决这个问题可能整体水平又下降了…)
+
+yyx252524：说到底就是罕见题型训练得太少了或是根本没练到
+
+mmmmhhhhzzzz 回复 @ak0xjHB3CNgXo2wO :自我对弈的棋谱就是数据，经验回放的方式就是拿这种数据当做gt来训网络。视频中的形状难以探索到。
+
+mmmmhhhhzzzz 回复 @ak0xjHB3CNgXo2wO :没有误会
+
+天才魔法士 回复 @mmmmhhhhzzzz :确实，自我对弈不出来这种也就没法学习
+
+mmmmhhhhzzzz 回复 @ak0xjHB3CNgXo2wO :👍不过值得注意的是，存在机器标注等情况用作psudeo gt的说法，当作蕴含了这种意思
+
+投机倒把专家：所以有没有可能引入拓扑？
+
+县铁咸阳段资深用户：围棋19路棋盘上能出现大约1.734*10^172种不同状态，真要用AI跑模型得跑到什么时候去……
+
+皇甫驿：本视频不能证明AI不能解决长龙，但能证明现有AI不能在40万步内算清长龙。潜台词是，如果给AI更多时间，例如到40万亿步，能否算清还未可知。
+而且，反过来想，站在编程的角度，在不提前预设方法
+
+CG咸鱼：典型的剪枝问题[doge]
+
+奈呓-：又是你[吃瓜]
+
+乐衎绥思：这不得@柯洁 [惊喜]
+
+俺の愛馬が孝心变质：我这里发现一个奇怪的问题，如果它认为这块黑棋是死棋，白领先一百多目，那它为什么还会认为第一选点在目里面呢？而不是直接认为终局了？[tv_鬼脸]
+
+腐草为萤轮回：Ai以最高胜率为准，就是不管怎样一定要赢，防止出现失误送对手赢。继续下下去也可以理解，关键是ai这里死活没算明白
+
+嗨嗨嗨41331：真正的原因是ai根本不懂死活
+
+拉黑我说明你心虚：你给ai一个填了360个子的棋盘ai也会给你一个选点。
+就像那个经典ai段子，一个识别名表的ai识别率高达3个9，然后你给他一个瓶盖，他还是会告诉你这是名表
+ai的输出在写最后一层输出的神经网络的时候就确定了，无论你给他什么离谱的情况，他总会给你一个输出。
+说人话就是，ai工程师没给裸的katago写终局这个动作，所以他做不出来
+
+LondonClass 回复 @lspSurelyPursue :我记得katago有一个输出是pass。输出pass不就可以认为是终局？
+
+拉黑我说明你心虚 回复 @LondonClass :这个需要对面也pass，双方停一手
+
+Mayormore：我怀疑角上的眼被padding掉了[doge]
+
+南方大冻梨：设计师：你们无不无聊，非得我在加个脱离主线的简单算法专门解决无聊的找bug游戏吗？
+
+21世纪是生物的世纪：对于棋手来说这，有点无聊。
+但是对ai来说这是致命的问题，因为这证明ai没有创造能力，只能从已经正确的习题集里找正确，不能找错误。这在固定的棋盘上不是问题，但是不在棋盘上，在棋盘外就问题很大。说这种ai是专精下棋打牌也不为过
+
+南方大冻梨 回复 @21世纪是生物的世纪 :不是创造力的问题吧，阿尔法狗0是自己下棋研究的围棋
+
+21世纪是生物的世纪 回复 @知乎-大家好 :那我这样说吧：棋盘外的创造力
+
+C露诺：死活的判断似乎连AI都做不出来
+
+genericity：AI只有棋感没有逻辑思维，总会有这种漏洞。不知道能不能附加一个专门处理两眼活棋和征子的模块。
+
+C露诺 回复 @genericity :现在的DL算法都是黑箱，没法加任何模块。古早的程序算法又处理不来数据量。
+
+genericity 回复 @C露诺 :回复 @C露诺 :只能加在非常外部的位置，比如由该模块在某些局面额外提供一个高权重选点，或者对局面评估作修正（比如这种看错死活的bug）。当然，要修好bug而不影响正常情况的棋力应该是很难的。
+
+古明地小石之海 回复 @genericity :专家系统死路一条，这种bug差不多要到ai能真正意义上取代人类时才能修好了
+
+Ember·Edison 回复 @genericity : 如果可以写一个很擅长抓终局官子，盘龙劫的专家系统，然后和katago对抗，那就可以提升katago在这些特例下的理解。
+
+36957-999 回复 @genericity :？？？AI只有棋感没有逻辑是我想不明白的，隔壁AI画画的说AI没有情感捏
+
+genericity 回复 @36957-999 :棋感不是情感。这里意思是AI的神经网络对棋的理解类似于人的直觉，而缺乏像“有两只真眼才是活棋”或者“征子要沿对角线验算”这样的规则，因此它会有漏洞。
+
+古明地小石之海 回复 @genericity :也不能说是只有神经网络吧，好像katago也有蒙特卡洛
+
+bili_48780061278 回复 @36957-999 :AI整不明白几个手指也是没有逻辑的提现[笑哭]，至于情感，我只能说文无第一武无第二，这种没有严格标准的东西全靠一张嘴
+
+科学方法送人头：这不叫bug吧，当然标题写bug更有流量[doge]
+
+小黑子苏珊-：@机器工具人 听歌识曲
+
+机器工具人：您请求的音乐详细信息如下:
+歌曲名:Instante hermosos China
+艺术家(歌手):Relaxing Music
+专辑:Instante hermosos China
+请求的时候歌曲已经播放至:3分20秒(总时长3分53秒)
+谢谢使用!
+音乐识别技术由 ACRCloud 提供
+
+cry丶funny：摆出来的棋结局已定，你让ai下什么
+
+multimap：bgm 是什么
+
+清明节萌萌猫：迫害AI區的up主[doge]
+
+剑啸寒州：原始粉丝
+太强了[打call]
+
+multimap：@听歌识曲机器人
+
+潜而为龙：原始粉丝
+6
+
+悍肖：没啥意义
+
+Katago的又一个bug：无眼活棋<br>
+https://www.bilibili.com/video/BV1ym4y1P7iX/
+
+katago的又一个bug。感觉ai其实挺笨的，但这么笨的ai却依然能暴打人类。。。
+
+科西嘉小矮人：视频中没录上的一点是，在手动收气至只有几气时，katago会突然发现黑棋是死棋，黑棋胜率归零。这点与之前的情况比较类似
+
+光天辉夜：大佬在discord上跟作者说了吗
+
+科西嘉小矮人 回复 @光天辉夜 :没，目前这个bug在实战中很难出现，估计作者不感兴趣。等哪天我利用bug分先赢katago之后再去找作者
+
+化为水WaTeR 回复 @科西嘉小矮人 :职业初段的水准就可以利用这个bug了，逼AI做大龙然后先不要定型，等龙足够大了再紧气，AI很容易算漏。
+
+不可知程度的能力 回复 @科西嘉小矮人 :up，你什么时候能第三次让九子下赢它
+
+科西嘉小矮人 回复 @不可知程度的能力 :目前看来很困难
+
+Aladfar 回复 @科西嘉小矮人 :应该说现在会出现bug的情况都是很极端的情况
+
+Nelyafinwe 回复 @Despicability :亚运团体决赛申杨那盘就出现了，143手时AI的所有推荐都会导向一个首尾相连的死棋形状，而杨鼎新实战选择的后手做活被评为恶手
+
+Doctor-Octopus 回复 @Nelyafinwe :那个不是盘龙眼活棋吗
+
+Nelyafinwe 回复 @Doctor-Octopus : 哪来的盘龙眼啊，黑棋中间一个铁眼，左边一个后手眼，按AI的走法自己把左边眼走没了
+
+fhankie 回复 @科西嘉小矮人 :我刚才从柯洁对檀啸的一盘棋里过来的，那一盘里白棋有一条大龙的死活问题，AI的表现就比柯洁要差一些
+
+小山师傅 回复 @科西嘉小矮人 :这就不算bug，属于是原理和现实上有冲突，ai如果有足够计算能力，是能算出来黑棋死棋的，实际上受制于算力，他还没有算到那一步，这种问题等你算力提升或者服务端算力提升，自然迎刃而解
+
+易词呃 回复 @小山师傅 :这就是计算方法有漏洞。人类棋手一眼看出的问题ai如果思路相同需要多大的计算量。
+
+小黑子苏珊- 回复 @小山师傅 :不是算力不够，相同配置老版本katago绝对能算出来
+
+易占问心：有可能ai自己是有对规则独到的理解。人在下围棋时，最基础的规则就是围与不围，然后为了进一步解释围与不围，用到了气的概念，而且还有眼的概念，一步一步的推，概念可以无限往下推，甚至每个棋手都可能有着不同的理解。ai就可能用着与人完全不同的规则来理解这个局面，而很不巧的是，他理解的这个规则，能很好处理其他局面，但恰好就不能很好的处理这个局面[doge]
+
+易占问心：甚至可能ai没有气和眼的概念，甚至都没有围与不围的概念[吃瓜]
+
+无情の抽奖机器：训练AI的时候是要认为给他设定规则的，一般就是用人体验到的规则设定。
+
+MonoCrystalSi：对于死活ai应该只需要提吃和打劫的概念
+
+爱睡觉的小包子：AI本质上是在所有可能下法的全集中根据预设的评估函数进行剪枝来简化搜索，围棋的全集远高于象棋，象棋ai可以模拟所有的排列组合但围棋不行，视频中这种情况是ai剪枝失误剪掉了
+
+希望晨光2 回复 @无情の抽奖机器 :但是这两年有些狗会从零开始自我博弈进步，就不是人类思维
+
+无情の抽奖机器 回复 @希望晨光2 :AI一直都不是人类思维，但是AI训练需要人类思维的帮助，必须先告诉他规则，他才能一点点训练。
+
+不可知程度的能力 回复 @无情の抽奖机器 :最新版本的还真不用告诉他规则
+
+无情の抽奖机器 回复 @不可知程度的能力 :怎么说？最新指的是？
+
+不可知程度的能力 回复 @无情の抽奖机器 :也不怎么新吧，从MuZero那一代就不用规则了，katago比mu更晚出，也是不用规则的。原理可以看这个不知道规则也能下围棋！？ 【恐怖如斯 MuZero】【上】
+
+无情の抽奖机器 回复 @不可知程度的能力 :我明白你的意思了，你说的无规则指的是不人为输入规则，靠AI体验，但是气这个概念本身就存在于基础规则里，虽然没有人为设定，但是AI还是需要遵守
+
+ZZBBKdragon：像是两家中医，各自有一套理论解释，但都不能穷尽
+
+iLMarblue 回复 @无情の抽奖机器 :气和眼不是围棋规则的一部分，围棋的规则只包含可以落子的位置，气和眼是为了理解人为假设的概念，之于两眼活棋单眼死棋是基于这个规则衍生出来的一个结果，ai学习的时候除了知道哪儿能落子哪儿是禁着点其他的气眼之类的概念是一概不知的明白吗
+
+iLMarblue：气的概念是为了描述棋子状态而创造的一个概念，ai不需要知道这个东西，这个玩意也没法遵守，因为基于这个概念你没法限制ai做出下一步行动，而像禁着点不允许两劫循环这样的限制ai落子的概念才叫游戏规则
+
+iLMarblue 回复 @无情の抽奖机器 :上面这个人贴出来的muzero甚至连禁着点这样的规则都不知道，再mu看来在已经有棋子的点上落子都是一种可以采取的行动，并且能给出这步行动的胜率，只是在mu给出这些行动后才人再主动过滤掉无法采取的行动，所以说mu不知道规则，在mu的运算过程中是连已经有棋子的点上不能再落子都没有遵守
+
+iLMarblue 回复 @无情の抽奖机器 :更不用说气这样的本来就不属于规则一部分的人造概念，遵守了这个规则被限制了思维的是人不是ai
+
+无情の抽奖机器 回复 @IiMarBlue :建议查询国家体育总局出的围棋规则，明确说明有气这个概念，属于围棋规则的一部分
+
+iLMarblue 回复 @无情の抽奖机器 :都说了，这些规则都是由在不允许在已经有棋子的位置落子和周围没有与之相连的空落子点或同色棋子的棋子要被提走这两条规则产生的结果或者延伸，归根到底就是这两条，训练ai也只需要这两条，国家体育总局之所以写这么多，就是为了照顾你这样的洞悉能力差并且只会迷信权威的蠢货，给你解释明白让你理解规则让你也能知道这个游戏该咋玩，让你在一开始就能知道一些由此产生变化
+
+iLMarblue 回复 @无情の抽奖机器 :假如我不告诉你眼内为禁着点，里面落子的话没有气会被提掉，假设你真的蠢到第一次也看见眼不知道该不该往里落子，你落子进去了，然后子被提了，那你也就知道这点是不能落子的，下次看见也不会往里落了，眼里不能落子是因为大家知道落进去也会被提掉于是就没人落所以大家约定俗成为禁着点干脆不让落子而不是这个点没有空位棋子放不进去，明白吗
+
+iLMarblue 回复 @无情の抽奖机器 :假如我不告诉一个新手有气或者与之相同的概念，我只告诉他我说的那两条规则，那这盘游戏还是能继续进行下去，只是会因为他不知道你说的那些规则而对我说的这两条根本性的规则理解不够而被我在棋盘上耍的团团转，但就算是这样也丝毫不影响这盘棋能够正常进行
+
+iLMarblue 回复 @无情の抽奖机器 :国家体育总局那个更加像是一份新手入门指南，让新手不会去采取一些没有意义的或者无法进行的行动
+
+iLMarblue 回复 @无情の抽奖机器 :再举个例子，不允许两劫循环这条“规则”，还是刚刚那个新手和我下棋，假如出现了两个劫，我不告诉他不允许两个劫来回打，我自己也玩心大发，他也犟起来，我们两个就在这两个劫上来回打，那么可以这样下吗？可以，因为我们两个的确这样下出来，为啥规则规定不能这样下呢？因为这样下是浪费时间没有意义的，而且往往在这样的局面下其中一方能在其他地方找到劫财来结束这个局面，所以正常的游戏中就规定不允许两个劫来回打
+
+iLMarblue 回复 @无情の抽奖机器 :但是三劫循环为什么能被允许而且还能和棋呢，其实还是因为绝大部分情况下没人能舍弃劫的位置去其他地方下保证自己不亏，假如三劫循环的局面次次都罗洗河那盘那样的条件人人都有罗洗河那样的水平，那三劫循环也是可以直接被禁止了
+
+jrnfpvrm：白棋赢不了，因为100颗黑棋盒盖放不下
+
+ilidilid大会员：如果柯洁当初用这种方法赢了master，大家会觉得人类战胜了ai吗[脱单doge]
+
+QuantumSlayer：狗的原理是深度强化学习（先用一个神经网络判断大致局势）+蒙特卡洛树搜索（从当前棋盘模拟下子获得更准确的判断）。而蒙特卡洛树搜索会优先在落子可能性更高的点进行搜索。这里的局面在实际对弈中基本上不能遇到（比如在正常有水平的对弈中，大片黑棋基本上肯定是活的），在训练过程中没有见过，神经网络就会误判成活的，于是当成收官的棋局。因此，根据蒙特卡洛规则，此时进行的大部分计算，其实都在收官那些地方算的。如果需要发现黑棋是死棋，那么至少需要搜索到把黑棋的气收的差不多为止，但是根据蒙特卡洛规则，基本上都不会往收气那个地方搜索，即便再算几亿步可能都不行
+
+Goddess陆伯言：那只能添加额外信息，比如用规则判断一块棋的死活，或者多块棋的对杀，模型和蒙特卡洛负责控制大局，细节部分用规则填充[tv_doge]
+
+QuantumSlayer：人类和AI在棋类游戏中的判断方式有本质不同。人类棋手往往会依赖直观、经验和“气”等抽象概念来评估棋局。这些都是人们多年练习和经验累积下来的。而AI，特别是利用深度学习的AI，其实并不“明白”棋局背后的逻辑或“气”。它通过无数次的模拟和计算来学习哪种走法在统计意义上更有可能获胜。而它能学出来的东西，可以简单理解为，给定一个棋局，AI用一些固定步骤的加法、乘法和函数运算来判断棋局。它通过大量的数据训练，逐渐学会了何时应该使用这些策略，但它自己不能明确解释为什么。对于死活，对杀这种非常复杂的概念，不是简单的数学公式就能完美解决的。
+
+QuantumSlayer 回复 @QuantumSlayer :解决这些bug，目前感觉最好的办法就是把这些棋局加入训练集。但是由于AI和人类本质的不同，修复以后，人类又可以根据自己的直觉，摆出新的但是AI没有见过的bug，无穷无尽。
+
+世界三大麦克雷：可能是exploration vs exploitation的参没调好
+
+zyckk 回复 @世界三大麦克雷 :katago运行可以设置广度的，但是这里广度调很高应该也没有用
+
+fzyzlzsys 回复 @Goddess陆伯言 :其实你们说的揭示了一个很深刻的现象：ai只会看表象，而没有逻辑。在围棋方面，正常比赛都不会出现这种情况，所以ai就不搜索了，也就不会了，这说明它没法从规则推理出这种情况黑棋会死；在自然语言处理上，让gpt写写文案很好，但是一碰数学就开始胡说八道，这说明它只懂得人类语言的表象而学不到语言背后的思维（包括总结、归纳、推理、空间直观形式等）。
+
+之前谷歌和剑桥他们搞ai for math的，先用网上的数学论坛和arxiv文章去训练ai，结果正确率大幅提升。我想这是因为我们写论文的时候，会介绍一下数学符号背后的思想。因此，他们也应该先用围棋基础教学的文章训练一下alpha go。
+
+Goddess陆伯言 回复 @fzyzlzsys :我印象中，alphago是把一块棋的死活状态、气的数量什么的，用普通程序单独计算出来，然后作为模型的输入一起用于训练/预测的来着，所以ai有逻辑，只不过逻辑是人写的，会有处理不到的场景。此时要么增加对应训练集，提高模型处理极端状态的水平；要么就优化硬编码逻辑，增加处理这种特殊情况的逻辑
+
+猪毛虫 回复 @QuantumSlayer :人类思维能从抽象规则起点开始直接演绎出具体内容，AI底层逻辑本身是个大归纳和大统计的算法，在这点上AI跟人类比没有意义，正如一部英文字母打字机永远不可能打出汉字一样。
+
+Kono-dadada 回复 @世界三大麦克雷 :我感觉，再怎么explore也不可能explore到像视频里摆的这样。只有agent出现reasoning能力了之后才有可能由此及彼
+
+-指尖年华-：katago还是太超前了。居然预判到了棋盒放不下[doge_金箍]
+
+bili_73649676320：这就是 AI 的实力，连预知未来都办得到。[doge]
+
+真是怠惰怪：棋子死了不是终结，不还有那么大空下吗？[哦呼]
+
+hzwzwzw03：但提这么多肯定赢了
+
+扮一场春寒：提了那么多，填子也填赢了
+
+该隐哒大嗒 回复 @hzwzwzw03 :数目法才算提子，应氏规则要求提尽证活，数子法可以不提，看规则的
+
+let_bw_ey：白棋可以不提
+
+樣品屋：AI是對的，當子數過多無論死活已經是提不得的了!!
+
+爱玩魔兽的小怪：有没有一种可能，白棋提了黑棋，黑棋依然能把里面空破掉一大半，所以算黑棋赢
+
+这是92：怎么可能，九段让我一路一圈我都能赢
+
+科西嘉小矮人：收到最后几气时ai会认为白棋赢
+
+只拉黑杠精：你会下围棋吗？
+
+珠泪哀歌族塞壬人鱼：不知道提子算目？
+
+失戀的人：我來認真回答這個問題，首先，死子不必非要提起來才算空，如果黑棋確定是死子，且外面其他官子也收完，白棋只要虛手，黑棋也只能虛手開始結算。其次，就算白棋把黑棋死子提吃，如果按數目法來計算，死子也算目，而黑棋死子太多，甚至已經超越左邊黑空，所以還是白棋大勝。最後最後，即便白棋提吃且按數子法來計算，因為白棋周圍後勢銅牆鐵壁，黑棋哪怕能活，也或不了太大塊，從全局形勢看，依然是白棋大勝
+
+丨_303_丨：这个评论下面怎么一堆不懂围棋的乱回答，和提子算目有什么关系，关键在于这么小的地方黑棋进去也活不了
+
+三叶的四叶草：有没有可能，你已经干净了我凭啥提掉
+
+SPDFG_：里面活不了，你围棋水平不够不清楚。。。
+
+fgchfxg：如果不提你怎么办？
+
+DX3096-e 回复 @fgchfxg :撞气自杀[doge]
+
+喃烧坤曦 回复  @丨_303_丨：这跟活棋有什么关系，白棋是活的为什么要提黑棋  
+
+丨_303_丨 回复  @喃烧坤曦：那黑棋要是就说右下是活棋呢  
+
+喃烧坤曦 回复  @丨_303_丨：围棋规则规定的右下角被白棋中间一点就默认是死棋，OK？  
+
+爱玩红石的猪灵 回复  @丨_303_丨：这么《小》？我走个三三，请开始你的表演  
+
+丨_303_丨 回复  @喃烧坤曦：那你说说哪条规则规定的  
+
+丨_303_丨 回复  @爱玩红石的猪灵：在二四的位置随便缩小缩小眼位就死了
+
+爱玩红石的猪灵 回复  @丨_303_丨：你二四，我二三挡，你走另一边二四？那我尖星位，你两个子要少一个，后面往两边走走自然就活  
+
+爱玩红石的猪灵 回复  @丨_303_丨：你可能是忘了黑棋把自己眼填了就能让白棋中间不留下子，剩下的隔了半个棋盘没啥威慑力  
+
+丨_303_丨 回复  @爱玩红石的猪灵：哦对，这个确实，黑棋确实能活一小块  
+
+晨星明庚 回复  @丨_303_丨：有没有8 9才不能活，这里11 11活一块棋很容易。你才是大聪明，只是单纯白子够多，中国规则下白一点一点填子也赢了（日韩规则提子算目直接赢）
+
+隨地大小卞 回复 @fgchfxg :应氏规则下黑棋撞气自杀，中国规则下有争议的棋实战解决，如果白棋留着不提，黑棋不承认自己是死子，就会被判双活，白显然不能接受；白棋要吃，黑棋就把眼填走，再填外气，让自己被吃出10*10的大空再点三三打入。
+
+该隐哒大嗒回复 @喃烧坤曦 :你是在不懂装懂，三大规则之一的应氏规则，规定了，提尽证活。数子法才可以不提，数目法每颗被提的子算两目
+
+太阳照常升起か: 白棋都这么厚了，你还想赢，是不是疯了，白棋提完子，黑棋只有一个右下角能下了，还想赢，那不是做梦吗
+
+Yog-Key-Sothoth: 啊不是，你让我女朋友执白，她也输不了啊，这能破……
+
+星与花的逃亡回复 @丨_303_丨 :说个p说规则不懂也来杠啊，规则干嘛的裁判干嘛的？
+
+丨_303_丨回复 @星与花的逃亡 :不懂规则就别乱杠，自己好好看一下中国规则去
+
+星与花的逃亡回复 @丨_303_丨 :谁不懂？能被提的都是死棋不知道？怎么围棋还有云玩家了？
+
+仙乐兮: 你这棋死的冰凉，我大龙又没死我为什么提你
+
+79132431654_bili回复 @星与花的逃亡 :能被提的一定是死棋吗 你知道倒脱靴吗
+
+照彻万川-: 白棋提完盖子放不下
+
+小黑子苏珊-: 我记得22年事最强权重就是60b了
+
+科西嘉小矮人: 18b比60b强。现在是28b最强
+
+小黑子苏珊-回复 @科西嘉小矮人 :好久没关注，没想到28b竟然取代60b了
+
+2147483648_bili回复 @科西嘉小矮人 :作者怎么不更新了
+
+亜璃子Official: 蒙特卡洛树剪枝导致的，强行增加剪枝部分探索比例会导致计算速度严重下降
+
+MonsieurTRISTE: 我猜测的原因：ai自我训练的时候，全都是随机落子，根本不会遇到这种大片黑子的情况
+
+超威蓝猫葛平: 估计就是棋型太怪了，不在直觉选点内，都没怎么往那算，可以提高下计算的广度试试
+
+科西嘉小矮人: 试过，加了广度还是算不出来。加广度仅在能提前一两步发现死棋时有用，视频中的局面距离ai发现死棋还有五六步，这种情况广度也没用的
+
+丨游侠: 说明模型是好棋训练出来的，没怎么喂过臭棋
+
+某一天93207回复 @丨游侠 :其实说明电脑还是在依靠暴力在枚举算棋。
+
+天道剑飞: 就好比人类免疫系统，突然遇见个奇怪的玩意，之前没见过的图形，识别不出来[笑哭]
+
+Binko_Ctr回复 @某一天93207 :暴力枚举能算出臭棋，它没有这样暴力训练过，所以看不出来
+
+sadACAC回复 @某一天93207 :你如果觉得这个剪枝是暴力，那人也未尝不是。人总结出来的那些所谓规律对于ai困难，但ai能明显区分出来的两个局面人也有可能会区分困难。两个独立地学习到高水平的智能体，他们总结出的底层规则不同也是可以理解的
+
+一品芝麻官丶宸: AI：能下出这么大块一定是活的！[doge]
+
+华阳做题家: AI是不是认为对手太菜了，就算全吃完了，自己从头从被吃后留下的空地去围空，依然能赢？[doge]类似于我把我的3800放这儿给你A，A了我重新去打一个3800，照样赢你[doge]
+
+鹏奇Marvelous: 让我摆成白棋那样，柯洁来了我也稳赢[doge][doge][doge]
+
+库尔特鲁斯-陨烬: 3800是指师炸吗
+
+华人至上主义者回复 @库尔特鲁斯-陨烬 :是指圣者遗物[doge]
+
+AKA臭脸羊驼: 我怀疑你在暗示某dota1玩家，但我不好说[doge]
+
+未见青云志: 蛛丝马迹表示很淦，但给你点了个赞
+
+哦哈啦嘿呵: 这种奇怪的局面ai在自我对弈的时候没有训练到，所以算不明白？[思考]
+
+星星很完美: 很复杂，不知道原理
+
+wqxhrl: 应该是ai不能阅读整块棋盘，分区的时候由于某块棋子太多，超过了最大区块限制，产生的bug。
+
+洞悉万物: 这种局面很难在自我对弈时出现，ai只会对它见过的局面判断比较准
+
+krd之王俞斌常昊回复 @wqxhrl :感觉不是，柯洁和谢科有盘棋二十多个子的大龙，下半盘盘了一圈ai都没什么问题
+
+丨游侠: 说明模型训练的时候没怎么喂过臭棋
+
+fhankie: 其实不要想太多，真实情况就是不管是人还是ai都还没完全破解围棋
+
+维恩稳: ai只能根据人类的棋局算最优解，它其实不懂什么是死什么是活。也就是说实战中不可能出现的局面ai是从来没有见过的，也没有办法处理
+
+Chan_Im: katago:棋长一尺，无眼自活
+
+科西嘉小矮人: 看我上一个视频：棋长一尺，两眼也死
+
+我手里没有火柴: 这不是katago的bug，这是基因的bug。
+
+我手里没有火柴: 看到异性长得好看，就一定好吗？
+
+我手里没有火柴: 这些棋局，ai走不出来。也就是盲点。
+
+大妖若仙: 我觉得，不是因为太大无法判断，是因为出现的太少，它在用小区块棋型到数据库里对比的时候找不到，因此无法对胜率进行修正
+
+儒雅少年XYK: 这种bug并不是技术方面的，正常也不可能下成这样
+
+快乐小小刀: 绝艺也有这个bug,甚至白棋已经点眼了但还是黑棋胜率高
+
+巫女桔子才不是污女呢: 弹幕有个说法，说AI认为即时黑棋被全部提吃，也能在大空中再围出一大块地。
+不知能否验证？
+
+xjsll: 很难活，就算能活最多也就活个10来目，白棋是铜墙铁壁肯定赢多了
+
+哀酱丶丶: AI判断死活棋的标准应该是先看气，因为有很多外势并没有形成眼，可能电脑认为有特别多气的棋是外势那种性质的棋，所以判断不出死活。
+
+蝴蝶花744: 死了后，右下角还有好大一块
+
+遨游天宇: 用60B吧，我用60B没测出来问题
+
+科西嘉小矮人: 60b我只有去年的权重，实测也有这个bug
+
+populos: 其实这种局面是可以靠对抗神经网络算出来的，理论上无穷无尽，但是人类依旧下不过ai
+
+Widely_Lisboa: b18c384nbt才是最强的权重吧
+
+小黑子苏珊-: 啊什么时候18b成最强了，我记得22年时最强就是60b了啊
+
+账号已注销: AI觉得黑那么一大块，肯定死不了。在实战中也确实不会出现这种情况[脱单doge]
+
+科研汪请留步: katago只是一个ai。他自己训练的时候没遇到过这种情况，不会下很正常
+
+LacLic: 有没有一种可能，是白棋提光黑棋后，黑棋可以打入做活
+
+为啥改名6硬币: 逆天，这黑棋一点机会没有
+
+库特_哇呼_塔: 有没有一种可能9×9有棋[笑哭]
+
+星华月辉: 你把黑棋提了a安一样能点进去活棋，所以还是黑棋赢
+
+隣の泥棒猫: 既然这样，我其实更想看看两个AI继续下能成啥样？
+
+杰瑞铁: 没开广度导致的
+
+阿梨牌话西言: 我觉得是因为左边黑棋[doge]
+
+UC纪元终将到来: 现在的只能叫脚本 还远达不到能称之为AI人工智能的地步
+
+永雏阿蒙: 棋长一尺 无眼自活
+
+TommyQuick: 是不是中国规则？可能katago认为白吃完之后黑能打入做活，因此白还是输。也许换个日本规则会有不同吧[doge]
+
+_____43: 白棋在点眼的位置多一个子黑就不可能进来
+
+_____43: 而且白棋没必要自己提黑棋，黑本来就是死的，而且黑全盘就60来目，就算角上活一块肯定白棋也大胜
+
+星华月辉回复 @133357566377 :按中国围棋的规则，你不提黑棋赢了，裁判会判断这个区域还有战斗，如果你不提那他只剩一口气也是活棋。
+
+_____43回复 @星华月辉 :不是的哦，中国规则判这是死棋的
+
+星华月辉回复 @133357566377 :中国规则你只能提，不提不能结束对局，如果你硬是不提那他就按活棋来判，懂了吗。
+
+_____43回复 @星华月辉 :那可能我记错了，但是中国规则是算子数，我可以所有单官收完再收气提你，不影响目数
+
+星华月辉回复 @_____43 :中国规则是算子，但问题是里面不是你的目啊，不是你的目那就不是你的子，你不提算双活，双活也是活。
+
+_____43回复 @星华月辉 :怎么不提，我提你啊，我外面是活的等收完单官我一口一口收气你不是死的吗
+
+团长不吃牛肉: 所以围棋AI只是计算强，智能并不高[思考]
+
+易占问心: 不好说，很可能ai对规则有自己独到的理解[doge]
+
+vincentwow1984: 围棋的本质就是计算，只能说目前算力还是不够穷尽所有变化
+
+一只小桃呀111: 双活：我吃柠檬
+
+bili_1660006672: 这是双活？
+
+世界三大麦克雷: 所以可以归纳为katago根本就不懂围棋吗
+
+早起的天鹅有塑料袋吃: 它压根没想到会有人都有这么大一片棋了居然还是死的
+
+hehe_Official: AI觉得一大坨竟然没活[doge]
+
+南方大冻梨: 怎么不试试狗zero
+
+wNvgaming_Jungle: 人类围棋最后的尊严
+
+嗨嗨嗨41331: 根本原因 ai根本不懂什么是眼或者直接点说 ai不懂死活
+
+I_am_rapper: 娱乐棋形，ai看不懂的，它估计都不认为这是一盘棋。
+
+-----------
 接“新的南非出资聘请古巴医生帮助重建我们支离破碎的医疗卫生系统，并允许卢旺达学生以当地费用就读其大学。”
 
 在数百名受益于南非慷慨资助的学生中，有些是失去双亲的幸存者；有些是叛徒的孩子；还有许多人两者都不是。他们中的大多数人后来都在我们国家的不同领域成为了领导者。今天，他们过着一种全新的生活。
